--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Manali Biswas",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.0.1",    
+    "ejs": "^3.0.1",
+	  "express": "^4.17.1"
   }
 }
